examples/pos/codepos.effekt
def printCodepos(): Unit / codepos = {
  println(do codepos())
}

def printCodeposTwice(): Unit / codepos = {
  printCodepos()
  printCodepos()
}
def atHere{ body: => Unit / codepos }: Unit = {
  body()
}
def main() = {
  printCodepos()
  printCodepos()
  printCodeposTwice()
  try { printCodepos() } with codepos { () => resume("X") }
  atHere{ printCodepos() }
}