examples/neg/namer/issue950/effect_operation_with_same_name.effekt
interface Greet { def sayHello(): Unit }

def helloWorld() = try {
  sayHello()
} with Greet {
  def sayHello() = { println("Hello!"); resume(()) }
}

def main() = {
  helloWorld()
}